<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/drivon_white"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drivon_bgwhite"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/avanir5"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="@+id/drivon_white"
        app:layout_constraintStart_toStartOf="@+id/drivon_white"
        app:layout_constraintTop_toBottomOf="@+id/drivon_white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome">

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="email"
            android:ems="10"
            android:fontFamily="@font/avanir3"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/black"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:textColorHint="@android:color/black"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/avanir3"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/black"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avanir3"
        android:text="@string/don_t_have_account"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/et2"
        app:layout_constraintTop_toBottomOf="@+id/et2" />

    <TextView
        android:id="@+id/tv_signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3dp"
        android:fontFamily="@font/avanir5"
        android:text="@string/create_now"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="@+id/tv1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/avanir9"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_link" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/avanir3"
        android:text="@string/or"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/iv_line1"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="#000000"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or" />

    <ImageView
        android:id="@+id/iv_line2"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginStart="@dimen/_10dp"
        android:background="#000000"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or" />

    <Button
        android:id="@+id/btn_signup_gmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:background="@drawable/button_google"
        android:fontFamily="@font/avanir9"
        android:text="@string/sign_in_with_google"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

</androidx.constraintlayout.widget.ConstraintLayout>